--- a/css/themes/lavender-mist.css
+++ b/css/themes/lavender-mist.css
@@ -13,9 +13,9 @@
   --accent-3: #cfa7e4;
   --accent-4: #a68bce;
   --accent-5: #d5c1ef;
-  --border-color: #d6cfe4;
-  --border-light: #ece8f4;
-  --border-dotted: #d7cfe5;
+  --border-color: #bfb0d0;
+  --border-light: #d8cce4;
+  --border-dotted: #c8b8d8;
   --checkbox-border: #b39fd3;
   --icon-color: #8e79b5;
   --header-font: 'Playfair Display', serif;
